tags h2 align fix

--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,10 @@ h2 {
 	padding: 4px 8px;
 }
 
+.technology-container h2 {
+	text-align: start;
+}
+
 .experience {
 	display: flex;
 	flex-direction: column;
